# minimal-reproduction-requests-bug

./: README.md  pyproject.toml
src/python_requests_bug/: __init__.py
tests/: __init__.py
