[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-requests-bug"
version = "0.0.0"
description = "Default template for PDM package"
authors = [
    {name = "Brighten Tompkins", email = "brightenqtompkins@gmail.com"},
]
dependencies = [
    "requests>=2.31.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "requests-mock>=1.11.0",
    "pytest>=8.0.2",
]

[tool.pytest.ini_options]
python_functions = "test_*"
python_files = "*.py"
testpaths = "tests"
